# vidistiller

./: .allow-binary-paths  .docker-compose-template.yml  .dockerignore  .env.example  .gitignore  .gitignore.template  .gitleaks.toml  .reposec.yml  .shipguard.toml  .shipguard.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_SPEC.md  Dockerfile.backend  Dockerfile.ffmpeg  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SOUL.md  TECH_STACK.md  VidDocs_UI_UX_Audit_Report.md  alembic.ini  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  main.py  new_viddocs_ui.pen  pencil-sync.config.json  pyproject.toml  vidistiller_ui_monokai.pen
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml
.project-hooks/: pre-commit
.superharness/: contract.yaml  features.json  ledger.md  session-progress.md
.superreins/: contract.yaml  ledger.md
backend/: .env.example  Dockerfile  README.md  main.py  requirements.txt
docs/: AUDIT-presentation-mode.md  DESIGN_SPEC.md  LXC_DEPLOYMENT.md  M2M_AUTH_DESIGN.md  MULTI_SOURCE_PLAN.md  PLAN-backlog-sonnet46.md  PLAN-presentation-mode-hardening.md  PLAN-two-pass-json-fix.md  README.md  README.my.notes.md  ROADMAP.md  SEMBLAR_INTEGRATION.md  VM_DEPLOYMENT.md  VidDocs_UI_UX_Audit_Report.md  bulletproof-report-2026-07-22.md  ops-runbook.md
e2e/: global-setup.ts  playwright.config.ts
features_to_add/: Handoff_SlideFeature_Max.docx  handoff_slide_feature.js
frontend/: .gitignore  CHANGELOG.md  Dockerfile  (+8 more)
(+219 files in other folders)
