[project]
name = "vidistiller"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[tool.pytest.ini_options]
markers = [
    "lxc: LXC deployment integration tests (run with -m lxc)",
]
