[project]
name = "vidistiller"
version = "1.12.15"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[tool.pytest.ini_options]
markers = [
    "staging: Staging deployment integration tests (run with -m staging)",
]
